@@ -4,6 +4,7 @@ Version Changes for Hypermail
 
  Kent Landfield (Feb 20, 2003)
    - added wait.h to msg2archive that was needed for s_popen()
+   - removed unused variable in finelink.c
 
  Jose Kahan (jose@w3.org) (Feb 20, 2003)
    - makemailcommand wasn't escaping non-ascii characters in the URLS
